hard-gists/5862530/run.log
=== Docker Run Log for 5862530 ===
Started at: Mi 29. Okt 16:07:35 CET 2025

[2025-10-29 16:07:36] START: Running container for 5862530
[2025-10-29 16:07:36] SUCCESS: Container f005b20e83b1cce572f4c007fbca8a361bf40cab5e903eee7273985ef4520242 started for 5862530
=== Container logs for 5862530 ===
  File "/snippet.py", line 27
    print "device not found"
    ^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 5862530 ===
[2025-10-29 16:07:38] INFO: Container f005b20e83b1cce572f4c007fbca8a361bf40cab5e903eee7273985ef4520242 has stopped
